examples/test/testpolicy14954.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14954
  namespace: namespace430
spec:
  podSelector:
    matchLabels:
      key24: value29
      key23: value0
      key36: value24
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key2: value39
          key20: value19
      podSelector:
        matchLabels:
          key17: value37
